# Coniunctio

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20240509152843_init.sql
src/: core.rs  lib.rs  main.rs  management.rs
